--- a/gatsby_fp/src/styles/facultyprofile.css
+++ b/gatsby_fp/src/styles/facultyprofile.css
@@ -1,14 +1,23 @@
 /* Styles for Faculty Profile */
 
 body {
-  font-size: 1.1em;
+  font-family: "Chaparral W01", Georgia, Times, "Times New Roman", serif;
+  font-style: normal;
+  font-weight: 300;
+  min-width: 300px;
+  overflow-x: hidden;
 }
 
 .sectiontitle {
-  font-size: 1.4em;
-  font-weight: bold;
-  padding-top: 0.4em;
-  margin-bottom:-0.2em;
+  font-family: "Trade Gothic W01", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.875rem;
+  font-size: 30px;
+  color: #666666;
+  padding-top: .4em;
+  margin: 24px 0 12px;
+  text-transform: none;
 }
 
 .publicationtitle {
@@ -24,8 +33,8 @@ body {
 }
 
 .bioimage {
-  margin-bottom:0.5em;
-  max-width: 150px;
+  margin-bottom: .9em;
+  max-height: 210px;
 }
 
 a {
@@ -47,10 +56,7 @@ p {
 
 .table_wrapper > .table_wrapper_inner > table > tbody > tr > td > .table_wrapper > .table_wrapper_inner > table > tbody > tr:first-child > td {
   font-family: "Chaparral W01",Georgia,Times,"Times New Roman",serif;
-  padding-top: 0;
-  padding-bottom: 20px;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0 0 15px;
   border-bottom: 1px solid #E0E0E0;
   font-size: 1.3em; 
 }
@@ -66,6 +72,11 @@ p {
 
 .table_wrapper:after {
   display: none;
+}
+
+.table td, table th{
+  padding: 18px 30px;
+  text-align: left;
 }
 
 table td {
