EK-154: Eliminated comment up top as an attempt to get rid of the huge diff in the pr

--- a/gatsby_fp/src/styles/site.css
+++ b/gatsby_fp/src/styles/site.css
@@ -2,11 +2,7 @@
  * stevens v0.0.1 [2020-04-15] 
  * Stevens Institute of Technology 
  * Fastspot 
- */
-/* ==========================================================================
-	Site - Non-Minified for Third-Party Use
-============================================================================= */
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+ */ /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
 /**
  * 1. Set default font family to sans-serif.
